# gsm-sms-telegram-bot

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Configuration.md  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
.github/scripts/: get_project_info.py
.github/workflows/: build.yml
src/: async_sms_reader.py  config.py  main.py
src/bot/: __init__.py  main.py  storage.py  threads.py  utils.py
src/bot/handlers/: __init__.py  commands.py  messages.py  send.py
src/sms_reader/: __init__.py  consts.py  facade.py  main.py  message_queue.py  models.py  modem.py  monitor.py  sms_reader.py  sms_sender.py  transport.py  utils.py
