[project]
name = "gsm-sms-telegram-bot"
version = "0.2.0b1"
description = "Send and receive SMS via Telegram using a GSM modem."
authors = [
  { name = "jag_k", email = "30597878+jag-k@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["telegram-bot", "sms", "sms-messages", "gsm", "gsm-modem"]
dependencies = [
  "logfire[system-metrics,httpx]>=4.25.0",
  "pydantic>=2.12.5",
  "pydantic-extra-types[phonenumbers]>=2.11.0",
  "pydantic-settings>=2.13.1",
  "pyserial>=3.5",
  "pyserial-asyncio>=0.6",
  "python-messaging>=0.5.13",
  "python-telegram-bot>=22.6",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Telephony",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/jag-k/gsm-sms-telegram-bot"
Documentation = "https://github.com/jag-k/gsm-sms-telegram-bot#readme"
Repository = "https://github.com/jag-k/gsm-sms-telegram-bot.git"
Issues = "https://github.com/jag-k/gsm-sms-telegram-bot/issues"
"Docker Image" = "https://github.com/jag-k/gsm-sms-telegram-bot/pkgs/container/gsm-sms-telegram-bot"

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "pydantic-settings-export>=1.0.3",
  "ruff>=0.15.4",
  "ssort>=0.16.0",
  "taplo>=0.9.3",
  "ty>=0.0.20",
]

# https://docs.astral.sh/ty/reference/configuration/
[tool.ty.environment]
extra-paths = ["src"]

# https://docs.astral.sh/ruff/
[tool.ruff]
line-length = 120
extend-exclude = [".idea", ".vscode", ".fleet"]
src = ["app"]

# https://docs.astral.sh/ruff/settings/#lint
[tool.ruff.lint]
select = [
  'F',     # flake8
  'I',     # isort
  'UP',    # pyupgrade
  'S',     # flake8-bandit
  'ASYNC', # flake8-async
  'B',     # flake8-bugbear
  'COM',   # flake8-commas
  'C4',    # flake8-comprehensions
  'DTZ',   # flake8-datetimez
  'LOG',   # flake8-logging
  #'G',     # flake8-logging-format
  'INP',  # flake8-no-pep420
  'PIE',  # flake8-pie
  'SIM',  # flake8-simplify
  'TID',  # flake8-tidy-imports
  'Q',    # flake8-quotes
  'PTH',  # flake8-use-pathlib
  'W',    # pycodestyle (warnings)
  'E',    # pycodestyle (errors)
  'N',    # pep8-naming
  'PT',   # flake8-pytest-style
  'PL',   # pylint
  'FURB', # refurb
  'RUF',  # ruff-specific rules
  #'TRY',   # tryceratops
]

# https://docs.astral.sh/ruff/settings/#extend-per-file-ignores
[tool.ruff.lint.extend-per-file-ignores]
'__init__.py' = [
  'F401',   # {name} imported but unused; consider using importlib.util.find_spec to test for availability
  'F403',   # from {name} import * used; unable to detect undefined names
  'F405',   # {name} may be undefined, or defined from star imports
  'TID252', # Relative imports from parent modules are banned
  #'TRY002', # Create your own exception
  #'TRY003', # Consider moving this statement to an else block
]

# https://docs.astral.sh/ruff/settings/#lintpylint
[tool.ruff.lint.pylint]
max-args = 12

# https://docs.astral.sh/ruff/settings/#lintflake8-tidy-imports
[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

# https://docs.astral.sh/ruff/settings/#lintpydocstyle
[tool.ruff.lint.pydocstyle]
convention = 'pep257'

# https://docs.astral.sh/ruff/settings/#lintmccabe
[tool.ruff.lint.mccabe]
max-complexity = 6

# https://docs.astral.sh/ruff/settings/#lintisort
[tool.ruff.lint.isort]
section-order = [
  'future',
  'standard-library',
  'third-party',
  'first-party',
  'local-folder',
]
lines-after-imports = 2
lines-between-types = 1

# https://github.com/jag-k/pydantic-settings-export#configuration
[tool.pydantic_settings_export]
project_dir = "."
default_settings = ["src.config:Settings"]

[[tool.pydantic_settings_export.generators.dotenv]]
paths = [".env.example"]

[[tool.pydantic_settings_export.generators.markdown]]
paths = ["Configuration.md"]
